# Game-Of-Life

./: CMakeLists.txt  README.md  main.cpp
src/: graphic_functions.cpp  graphic_functions.hpp  mainLib.cpp  mainLib.hpp
